# Rust-api

./: Cargo.toml  README.md  Readme.md
src/: constant.rs  main.rs
src/api/: mod.rs  user_api.rs
src/api/authorizaion/: mod.rs  token_auth.rs  validateRegister.rs
src/error/: error_response.rs
src/models/: login_user.rs  mod.rs  response.rs  user_model.rs
src/repository/: mod.rs  mongodb_repo.rs
